--- a/OpenCVCameraExample3/app/src/main/res/values/strings.xml
+++ b/OpenCVCameraExample3/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">OpenCV Camera Example3</string>
+    <string name="app_name">Parking Lot Forgard</string>
 </resources>
